samples/_failures_safe/1761551711_796772_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb5f9cab.c: In function ‘main’:
./samples/SAFE/__tmp_eb5f9cab.c:157:12: error: missing terminating " character
  157 |     printf("\nResult
      |            ^~~~~~~~~
./samples/SAFE/__tmp_eb5f9cab.c:157:5: error: expected expression at end of input
  157 |     printf("\nResult
      |     ^~~~~~
./samples/SAFE/__tmp_eb5f9cab.c:157:5: error: expected declaration or statement at end of input
